@@ -67,9 +67,7 @@ public class SegmentInfoPerCommit {
    *  segment. */
   public long sizeInBytes() throws IOException {
     if (sizeInBytes == -1) {
-      final Collection<String> files = new HashSet<String>();
-      info.getCodec().liveDocsFormat().files(this, files);
-      long sum = info.sizeInBytes();
+      long sum = 0;
       for (final String fileName : files()) {
         sum += info.dir.fileLength(fileName);
       }
